Fixed issue where could not quit game from menu on prod, added ability to not animate certain modals (used right now only for “game ended”).

--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -101,7 +101,7 @@
 
                         <h1>Are you <strong>sure</strong>? This will end the game for all players!</h1>
 
-                        <button id="btn-quit-yes" class="post-button submit btn" type="submit" name="submit" data-keep_open="true" data-keep_enabled="true">
+                        <button id="btn-quit-yes" class="post-button submit btn" type="submit" name="submit" data-keep_open="true">
                             Ok
                         </button>
                         <button id="btn-quit-no" class="post-button submit btn" type="submit" name="submit" data-keep_open="true" data-keep_enabled="true">
