Updated rules text replacing placeholder “something here” with “Once you have finished speaking the instructions to other players, press next”

--- a/templates/partials/shared/rules.hbs
+++ b/templates/partials/shared/rules.hbs
@@ -3,7 +3,7 @@
 	{{> component/instructions 
 			decider=true
 			heading="Read the text in the blue box out loud"
-			body="Something here"
+			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
 	{{> component/instructions 
@@ -27,7 +27,7 @@
 	{{> component/instructions 
 			decider=true
 			heading="Read the text in the blue box out loud"
-			body="Something here"
+			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
 	{{> component/instructions 
@@ -51,7 +51,7 @@
 	{{> component/instructions 
 			decider=true
 			heading="Read the text in the blue box out loud"
-			body="Something here"
+			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
 	{{> component/instructions 
@@ -76,7 +76,7 @@
 	{{> component/instructions 
 			decider=true
 			heading="Read the text in the blue box out loud"
-			body="Something here"
+			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
 	{{> component/instructions 
@@ -100,7 +100,7 @@
 	{{> component/instructions 
 			decider=true
 			heading="Read the text in the blue box out loud"
-			body="Something here"
+			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
 	{{> component/instructions 
@@ -124,7 +124,7 @@
 	{{> component/instructions 
 			decider=true
 			heading="Read the text in the blue box out loud"
-			body="Something here"
+			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
 	{{> component/instructions 
@@ -148,7 +148,7 @@
 	{{> component/instructions 
 			decider=true
 			heading="Read the text in the blue box out loud"
-			body="Something here"
+			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
 	{{> component/instructions 
@@ -172,7 +172,7 @@
 	{{> component/instructions 
 			decider=true
 			heading="Read the text in the blue box out loud"
-			body="Something here"
+			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
 	{{> component/instructions 
@@ -196,7 +196,7 @@
 	{{> component/instructions 
 			decider=true
 			heading="Read the text in the blue box out loud"
-			body="Something here"
+			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
 	{{> component/instructions 
@@ -220,7 +220,7 @@
 	{{> component/instructions 
 			decider=true
 			heading="Read the text in the blue box out loud"
-			body="Something here"
+			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
 	{{> component/instructions 
@@ -244,7 +244,7 @@
 	{{> component/instructions 
 			decider=true
 			heading="Read the text in the blue box out loud"
-			body="Something here"
+			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
 	{{> component/instructions 
@@ -268,7 +268,7 @@
 	{{> component/instructions 
 			decider=true
 			heading="Read the text in the blue box out loud"
-			body="Something here"
+			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
 	{{> component/instructions 
@@ -292,7 +292,7 @@
 	{{> component/instructions 
 			decider=true
 			heading="Read the text in the blue box out loud"
-			body="Something here"
+			body="Once you have finished speaking the instructions to other players, press next"
 	}}
 
 	{{> component/instructions 
