--- a/templates/partials/component/choice.hbs
+++ b/templates/partials/component/choice.hbs
@@ -33,7 +33,7 @@
 		<div class="inner-modal {{showHide this}}">
 			<div class="inner decide-winner">
 				<h1>The decider is about to choose a winning proposal</h1>
-				<h2>Whoever wins receive all the coins in the coin pot!</h2>
+				<h2>Whoever wins receives all the coins in the coin pot!</h2>
 
 				{{#each players}}
 			    <div id="player-{{icon}}" class="post-button submit player-box player-logo btn" style="cursor:default;">
