--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -55,16 +55,18 @@
 
 
 
-	// ion.sound({
- //    sounds: [
- //        {
- //            name: "button_tiny"
- //        }
- //    ],
- //    volume: 0.5,
- //    path: sfxPath,
- //    preload: true
- //  });
+	ion.sound({
+    sounds: [
+        {
+            name: "button_tiny"
+        }
+    ],
+    volume: 0.5,
+    path: sfxPath,
+    preload: true
+  });
+
+  console.log(sfxPath);
 
   // All possible socket event IDs
 	eventIds = [
