fix for end of round and end of game modals/buttons

--- a/templates/partials/shared/scoreboard.hbs
+++ b/templates/partials/shared/scoreboard.hbs
@@ -46,12 +46,12 @@
 			{{/each}}
 
 		</section>
-  	{{#ifeq round 3}}
-		
-			<div class="form decider speech">
-		    <button class="next-step submit scoreboard hidden-el" data-event="game:next_round">Go to Debrief</button>
-			</div>
+  	{{#ifnoteq round 3}}
 
+		  <div class="form decider speech">
+		    <button class="next-step submit scoreboard hidden-el" data-event="game:next_phase">Go to Next Round</button>
+			</div>
+			
 		{{else}}
 		
 			{{!-- winner modal --}}
@@ -72,10 +72,10 @@
 			</div>
 			
 			<div class="form decider speech">
-		    <button class="next-step submit scoreboard hidden-el" data-event="game:next_phase">Go to Next Round</button>
+		    <button class="next-step submit scoreboard hidden-el" data-event="game:next_round">Go to Debrief</button>
 			</div>
 
-		{{/ifeq}}
+		{{/ifnoteq}}
 
 	</div>
 
