Resolved issue where game never advanced to debrief.

--- a/templates/partials/shared/scoreboard.hbs
+++ b/templates/partials/shared/scoreboard.hbs
@@ -49,7 +49,7 @@
   	{{#ifnoteq round 3}}
 
 		  <div class="form decider speech">
-		    <button class="next-step submit scoreboard hidden-el" data-event="game:next_phase">Go to Next Round</button>
+		    <button class="next-step submit scoreboard hidden-el" data-event="game:next_round">Go to Next Round</button>
 			</div>
 			
 		{{else}}
@@ -72,7 +72,7 @@
 			</div>
 			
 			<div class="form decider speech">
-		    <button class="next-step submit scoreboard hidden-el" data-event="game:next_round">Go to Debrief</button>
+		    <button class="next-step submit scoreboard debrief hidden-el" data-event="game:next">Go to Debrief</button>
 			</div>
 
 		{{/ifnoteq}}
