--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -48,9 +48,9 @@
   currentPhaseIndex = -1,
   currentScreenIndex = 0,
 
-  sfxPath = 'https://res.cloudinary.com/engagement-lab-home/video/upload/v1492187090/at-stake/sfx/',
+  sfxPath = 'https://res.cloudinary.com/engagement-lab-home/video/upload/v1492187090/at-stake/sfx/';
   {{#ifeq env "development"}}
-  	sfxPath = '/sfx/'
+  	sfxPath = '/sfx/';
   {{/ifeq}}
 
 
@@ -65,8 +65,6 @@
     path: sfxPath,
     preload: true
   });
-
-  console.log(sfxPath);
 
   // All possible socket event IDs
 	eventIds = [
