--- a/templates/partials/shared/rolecard.hbs
+++ b/templates/partials/shared/rolecard.hbs
@@ -1,6 +1,10 @@
 <div id="btn-close-role-card" class="swipe">
-	<div class="caption">Swipe down to close</div>
-	<img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1491503871/at-stake/layout/swipe-2.svg">
+	<div class="caption">
+			<p>press here to close role card</p>
+			<div class="down-btn">
+		      <div class="arrow"></div>
+		   </div>
+	</div>
 </div>
 
 	<span class="instruction">This is the <span>stakeholder role</span> you are playing this round. Your proposal should reflect your character’s perspective.</span>
@@ -16,7 +20,7 @@
 	<div class="line"></div>
 <div class="agenda-wrap">
 	<h1 class="header">Hidden Agenda Items</h1>
-	<span class="instruction">At the end of the round, you recieve bonus tokens if the decider believes that  your hidden agenda item is included in the chosen winning proposal.</span>
+	<span class="instruction">At the end of the round, you win bonus coins if the decider thinks your agenda item is included in the winning proposal.</span>
 
 	<div class="agenda-item"><span class="value">100</span><div class="agenda">{{agendaItems.[0]}}</div></div>
 	<div class="agenda-item"><span class="value">200</span><div class="agenda">{{agendaItems.[1]}}</div></div>
