--- a/templates/partials/script/player_animation.hbs
+++ b/templates/partials/script/player_animation.hbs
@@ -202,8 +202,8 @@ var screenOpen = function(screenElement) {
 
 		else if(screenElement.data('animation') === 'debrief') {
 			new TimelineLite()
-			.fromTo($('#stages-bar'), 1.5, { yPercent:0, autoAlpha:1 }, { yPercent:-100, autoAlpha:0, ease:Expo.easeOut } )
-			.fromTo($('#login-header'), 1, { yPercent:-100, autoAlpha:0 }, { yPercent:0, autoAlpha:1, ease:Expo.easeIn } );
+			.fromTo($('#stages-bar'), 1, { yPercent:0, autoAlpha:1, height:50, display:'block' }, { yPercent:-100, autoAlpha:0, height:0, display:'none', ease:Expo.easeOut } )
+			.fromTo($('#login-header'), .7, { yPercent:-100, autoAlpha:0 }, { yPercent:0, autoAlpha:1, ease:Expo.easeOut } );
 		}
 	}
 
