timer css updates

--- a/public/styles/_core/media.scss
+++ b/public/styles/_core/media.scss
@@ -107,6 +107,13 @@
 		}
 	}
 
+	body .timer_wrap {
+		p {
+			margin-top: 23%;
+			width: 100%;
+		}
+	}
+
 	
 }
 
@@ -146,6 +153,13 @@
 				  left: 103px;
 				}
 		  }
+		}
+	}
+
+	body #timer_wrap {
+		p {
+			margin-top: 23%;
+			width: 100%;
 		}
 	}
 	
