--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -332,7 +332,7 @@ input.post-button {
     display: inline-block;
     margin-top: 48%;
     font-size: 17px;
-    width: 70%;
+    width: 100%;
     text-align: center;
 	}
 	.progressbar-text {
@@ -711,6 +711,7 @@ input.post-button {
 			margin: 0px 8px;
 	    line-height: 1.17;
 	    padding-top: 1%;
+	    display: inline-block;
 			@include gradient-vertical($sunflower, $tangerine, 97%, 3%);	
   	}
   	.arrow {
@@ -791,9 +792,8 @@ input.post-button {
   .agenda-item {
   	border-radius: 100px;
   	background-color: $orange-dark;
-  	margin: 16px;
+  	margin: 8px;
   	height: 60px;
-  	margin-top: 24px;
   	color: white;
 
 
@@ -897,7 +897,7 @@ blockquote.speech {
     text-align: justify;
     width: 90%;
     height: 287px;
-    padding: 50px 30px;
+    padding: 40px 20px;
     margin: 1em 0 0;
     margin-left: 5%;
     z-index: 1000;
