SFX initial commit, base files (AAC, OGG, WAV) w/o declaration or call

--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -58,7 +58,8 @@
 	ion.sound({
     sounds: [
         {
-            name: "button_tiny"
+            name: "button_tiny",
+            
         }
     ],
     volume: 0.5,
