--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -181,7 +181,7 @@ socketEvents = function(eventId, eventData) {
 
         case 'connect':
 
-            // ion.sound.play("button_tiny");
+            ion.sound.play("button_tiny");
             
             if(sessionStorage.getItem('gameCode')) {
                 // Check if player is active in game
@@ -272,7 +272,7 @@ socketEvents = function(eventId, eventData) {
 
                 $('#btn-close-role-card').on('click', function(evt) {
                     roleCardOpenClose(false);
-                    // ion.sound.play("button_tiny");
+                    ion.sound.play("button_tiny");
                 });
                 $('#btn-role-card').on('click', function(evt) {
                     roleCardOpenClose(true);
