sfx name declarations

--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -59,7 +59,19 @@
     sounds: [
         {
             name: "button_tiny",
-            
+            name: "add_coin",
+            name: "alarm_single",
+            name: "back",
+            name: "click1",
+            name: "click2",
+            name: "click3",
+            name: "coins",
+            name: "confirm",
+            name: "player_green",
+            name: "player_orange",
+            name: "player_pink",
+            name: "player_red",
+            name: "player_yellow",
         }
     ],
     volume: 0.5,
