update some of the lobby screen, fix timer size change

--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -611,13 +611,13 @@
 		  }
 		  // TODO: color var
 		  span:nth-child(2) {
-		  	color: white;
+		  	color: #fc2058;
 		  }
 		  span:nth-child(3) {
-			  color: $grey-dark;
+			  color: #fdb211;
 		  }
 		  span:nth-child(4) {
-		  	color: #56f6d6;
+		  	color: #4acbff;
 		  }
 		}
 		p {
