--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -1,7 +1,7 @@
 <section id="lobby">
 
   <div id="login-header">
-    {{{cloudinaryUrl "v1490382079/at-stake/s-t-a-k-e-l-o-g-o_3x.png" width=300 }}}
+    {{{cloudinaryUrl "/v1492725109/at-stake/atstake-logo.svg" width=224 }}}
   </div>
 
   {{!-- NAME ENTRY --}}
@@ -15,7 +15,7 @@
     </div>
     <div class="login-footer">
       <section id="description">
-        <p>@Stake promotes empathy and creativity among diverse perspectives in a fast-paced role-playing game. We created it to help facilitate productive and fair conversations in classrooms, conferences, strategic planning meetings, and public events. You'll get a change to dream up solutiond to real-world issues facing communities from a variety of stakeholder perspectives!</p>
+        <p>@Stake is a fast paced role-playing game promoting empathy and creativity among diverse perspectives.</p>
       </section>
       <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1490382407/at-stake/e-l-logo_3x.png" height='auto' width='200px'> 
     </div>
