--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -188,7 +188,9 @@
 	width: 90%;
 	margin: 15% auto;
 	margin-top: 0px;
+	line-height:1.33;
 	font-size: 12px;
+	font-family: AvenirNext-Medium;
 	color: lighten($background-color, 20%);
 	&.pink {
 		color: $pink-dark;
@@ -316,17 +318,18 @@ input.post-button {
 	button {
     background: none;
     border: none;
-    max-width: 246px;
+    max-width: 196px;
 	}
 	svg {
 		// width: 82% !important;
 		margin: 20px auto;
-    max-width: 246px;
+    max-width: 196px;
 	}
 	h1 {
     font-family: $header-type;
     font-size: 20px;
     margin-top: 1%;
+    font-family: AvenirNext-Bold;
 	}
 	p {
     display: inline-block;
@@ -334,12 +337,14 @@ input.post-button {
     font-size: 17px;
     width: 100%;
     text-align: center;
+    font-family: AvenirNext-DemiBold;
 	}
 	.progressbar-text {
 		font-size: 72px;
 		letter-spacing: -2.1px;
     margin-top: -79%;
     color: white !important;
+    font-family: AvenirNext-DemiBold;
 	}
 
 	&.running {
@@ -347,7 +352,7 @@ input.post-button {
 			position: relative;
 			z-index: 1;
 			h1 {
-				margin-top: -27%;
+				margin-top: -29%;
 			}
 			p {
 				margin-top: 26%;
