font and player icon update

--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -112,7 +112,7 @@
 			right: 0px;
 			bottom: 0px;
 			font-size: 24px;
-			font-family: AvenirNext;
+			font-family: AvenirNext-Bold;
 		}
 
 		.username {
@@ -391,7 +391,7 @@
 			background: -webkit-linear-gradient(top, $orange-light 90%, $orange-dark 10%); /* Chrome10-25,Safari5.1-6 */
 			background: linear-gradient(to bottom, $orange-light 90%, $orange-dark 10%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 			position: relative;
-		  font-family: AvenirNext;
+		  font-family: AvenirNext-Bold;
 		  font-size: 20px;
 		  font-weight: bold;
 		  font-style: normal;
