--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -181,7 +181,7 @@ socketEvents = function(eventId, eventData) {
 
         case 'connect':
 
-            ion.sound.play("button_tiny");
+            ion.sound.play("player_pink");
             
             if(sessionStorage.getItem('gameCode')) {
                 // Check if player is active in game
@@ -228,6 +228,8 @@ socketEvents = function(eventId, eventData) {
 
         case 'player:loggedin':
             
+            ion.sound.play("player_pink");
+
             playerWasReconnected = false;
 
             if (isDecider)
@@ -272,11 +274,11 @@ socketEvents = function(eventId, eventData) {
 
                 $('#btn-close-role-card').on('click', function(evt) {
                     roleCardOpenClose(false);
-                    // ion.sound.play("button_tiny");
+                    ion.sound.play("click1");
                 });
                 $('#btn-role-card').on('click', function(evt) {
                     roleCardOpenClose(true);
-                    // ion.sound.play("button_tiny");
+                    ion.sound.play("back");
                 });
                 
                 $('#gameContent').html(markup).promise().done(function() {
