lobby style overhaul

--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -38,7 +38,7 @@
 		&:not(#decider) {
 			width: 100%;
 		  height: 70%;
-		  bottom: 0px;		  
+		  bottom: 0px;
 
 		  &.player-grid {
 		  	width:100% !important;
@@ -50,8 +50,9 @@
 		}
 		
 		&#decider {
+			padding-top:8px;
 			.waiting {
-				width: 90%;
+				width: 100%;
 				margin: 0px auto;
 			}
 		}
@@ -98,7 +99,7 @@
 		#btn-start-game {
 			width: auto;
 			white-space: normal;
-			color: $turquoise-light;
+			color: white;
 			border: 0px;
 			border-radius:0px;
 			height:auto;
@@ -150,6 +151,8 @@
 
 		&#choices {
 
+			margin-top:-16px;	
+			height: 80%;  
 			#btn_new_game {
 				@include gradient-vertical($orange-light, $orange-dark, 90%, 10%);					
 			}
@@ -170,7 +173,7 @@
 			height:48px;
 			padding:0px;
 			margin: 0 auto;
-			margin-bottom: 70px;
+			margin-bottom: 60px;
 
 			h2 {
 				font-size: 20px;
@@ -213,15 +216,16 @@
 
 		img {
 			// height: 136px;
-			width: 256px;
+			width: 198px;
 			padding: 10px;
 		}
 
 		p {
 			color: white;
-			width: 80%;
-			margin-left: 10%;
-			font-size: 12px;
+			width: 226px;
+			margin: 0px auto;
+			font-size: 16px;
+			font-family: AvenirNext-Medium;
 		}
 
 	}
@@ -421,8 +425,8 @@
 
 		.form-prompt {
 			font-size: 12px;
-			color: lighten($background-color, 10%);
-			margin-bottom: 20px;
+			color: #fafafa;
+			margin-bottom: 8px;
 		}
 		.decks-prompt {
 			font-size: 12px;
@@ -463,10 +467,10 @@
 				position: relative;
 			}
 			.glide__bullets > * {
-				background-color: white;
+				background-color: #d8d8d8;
 			}
 			.glide__bullets > *.active {
-				background-color: lighten($background-color, 10%);
+				background-color: white;
 			}
 			.glide__bullets > *:focus {
 				border: 0px;
@@ -502,9 +506,14 @@
 						color: white;
 						box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
 						font-weight: 700;
+						font-size: 16px;
 				  	font-family: AvenirNext-Bold;
 				  	h2 {
 				  		margin:0px;
+				  	}
+
+				  	.description {
+				  		font-size: 12px;
 				  	}
 					}
 
@@ -515,8 +524,8 @@
 
 					.question {
 						height: auto;
-						margin: 8px 5%;
-						color: lighten(black, 10%);
+						margin: 8px 16px;
+						color: #949494;
 					  text-align: center;
 				  	line-height: 12px;
 				  	font-size: 12px;
@@ -527,7 +536,6 @@
 					.stakeholders {
 						width: 100%;
 						padding:0px;
-						margin-bottom: 8px;
 						display: inline-block;
 					}
 
@@ -547,6 +555,7 @@
 				    	padding:0px;
 				    	line-height: 1.33;
 				    	vertical-align: middle;
+				    	text-align: center;
 				    }
 
 				    &:nth-child(1) {
@@ -554,6 +563,14 @@
 				    	margin-right:2%;
 				    }
 				    &:nth-child(2) {
+				    	margin-right:8%;
+				    	margin-left:2%;
+				    }
+				    &:nth-child(3) {
+				    	margin-left:8%;
+				    	margin-right:2%;
+				    }
+				    &:nth-child(4) {
 				    	margin-right:8%;
 				    	margin-left:2%;
 				    }
@@ -574,6 +591,7 @@
 	#share_code, #game_code {
 		text-align: center;
 	  color: #fafafa;
+	  width:100%;
 	  margin-top: -30px;
 
 		h1:not(.access-code) {
@@ -596,13 +614,13 @@
 		padding: 0px;
 
 		.access-code {
-			max-width: 70%;
+			max-width: 200px;
 		  height: auto;
 		  font-size: 56px !important;
 		  padding: 5px;
 		  // color: #0098d0;
 		  border: 3px solid #61f5de;
-		  background-color: transparent;
+		  background-color: #00c2a9;
 		  margin: 10px auto;
 		  font-family: $aileron;
 
@@ -626,8 +644,19 @@
 	}
 		
 	.player-logo {
+		height: 40px;
+		width: 200px;
+		margin:8px;
 		p {
-			color: $grey-dark;
+			text-align: left;
+			color: #949494;
+			font-family: AvenirNext-Bold;
+			font-size: 20px;
+			height:20px;
+			line-height: 40px;
+			float:left;
+			margin: 0px;
+
 		}
 	}
 
