--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -1,7 +1,8 @@
 <section id="lobby">
 
   <div id="login-header">
-    {{{cloudinaryUrl "/v1492725109/at-stake/atstake-logo.svg" width=224 }}}
+    {{{cloudinaryUrl "/v1492725109/at-stake/atstake-logo.svg" width=198 }}}
+    <p>Deliberate, Negotiate, Decide</p>
   </div>
 
   {{!-- NAME ENTRY --}}
@@ -32,12 +33,12 @@
 
       <div id="btn_new_game" class="btn btn-default">
         <h2>Start new game</h2>
-      <div class="btn_cap">Select a deck and receive a 4 digit room code that other players can use to join your game</div>
+      <div class="btn_cap">Select a stakeholder deck and share a room code with other players</div>
       </div>
 
       <div id="btn_join_game" class="btn btn-default" data-from="choices" data-to="join">
         <h2>Join a game</h2>
-      <div class="btn_cap">use your 4 digit room code to join a game</div>
+      <div class="btn_cap">Use a room code to join a game</div>
       </div>
 
     </div>
@@ -50,9 +51,8 @@
     <div class="form create col-sm-12 col-lg-12 col-centered" id="deck-choice">
 
       <h3 class="white">Select a Deck</h3>
-      <div class="form-prompt">Your deck will determine what problems you solve and what roles you get to play.</div>
+      <div class="form-prompt">Swipe left or right or use the arrow keys to select a Stakeholder deck. When ready, press next.</div>
       
-      <div class="decks-prompt">Use arrow keys or swipe left and right to switch decks</div>
       <section id="decks" class="glide">
 
       </section>
@@ -67,8 +67,8 @@
 
       <div id="share_code"> 
         <h1>Share Your Room Code</h1>
-        <h1 class="access-code"></h1>
         <p>Share this 4 digit code with players. Once at least 3 players have joined, press play to begin</p>
+        <h1 class="access-code"></h1>
       </div>
 
       <div class="col-sm-12 player-grid">
@@ -98,7 +98,7 @@
         <div id="btn-tutorial-skip" data-event="game:start" data-package='{"tutorial": "false"}' class="btn btn-default submit">
           <h2>Or tap <strong>here</strong> to skip</h2>
         </div>
-        <div class="btn_cap">The tutorial will show you how @Stake works, how to play, and how to win!  </div>
+        <div class="btn_cap">Learn the rules of the game, how to play, and how to win!</div>
 
       </div>
 
