--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -20,7 +20,9 @@
 		right: 0;
 		bottom: 10px;
 		margin-bottom: 10px;
-		color: $turquoise-light;
+		font-size: 24px;
+		font-family: AvenirNext-Bold;
+		color: white;
 		width: 96px;
 		padding: 0px;
 		min-width: 0px;
@@ -62,6 +64,11 @@
 		}
 		#tutorial {
 	    padding-top: 65%;
+
+	    .btn_cap {
+	    	width: 200px;
+	    	margin: 0 auto;
+	    }
 		}
 
 		// Show back button on login screen
