--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -744,7 +744,7 @@ input.post-button {
 	  }
   }
   .icon {
-  	margin: 8px auto;
+  	margin: 4px auto;
     width: 70px;
     height: 70px;
     border-radius: 35px;
@@ -789,6 +789,7 @@ input.post-button {
   	.header {
   		font-family: AvenirNext-Heavy;
   		color: #18b898;
+  		font-size: 20px;
   	}
 
   	.instruction {
@@ -803,19 +804,19 @@ input.post-button {
   	border-radius: 100px;
   	background-color: $orange-dark;
   	margin: 8px;
-  	height: 60px;
+  	height: 56px;
   	color: white;
 
 
   	.value {
-	  	height: 60px;
-	  	width: 60px;
-	  	line-height: 62px;
+	  	height: 56px;
+	  	width: 56px;
+	  	line-height: 58px;
 	  	display: inline-block;
 	  	float: left;
 	  	font-size: 24px;
 	  	font-family: AvenirNext-Bold;
-	    background-size: 54px 54px;
+	    background-size: 50px 50px;
 	    background-position: 3px 3px;
 	  	// background-size: cover;
 	  	background-repeat: no-repeat;
@@ -824,7 +825,7 @@ input.post-button {
 	  .agenda {
 	  	height: 32px;
       margin: 10px auto;
-	  	width: 208px;
+	  	width: 180px;
 	  	display:inline-block;
 	  	text-align: left;
 	  	line-height:1.2;
