--- a/templates/partials/shared/rolecard.hbs
+++ b/templates/partials/shared/rolecard.hbs
@@ -8,7 +8,7 @@
 		</div>
 	</div>
 
-		<span class="instruction">This is the <span>stakeholder role</span> you are playing this round. Your proposal should reflect your character’s perspective.</span>
+		<span class="instruction">This is your <span>stakeholder role</span>. Your proposal should reflect this stakeholder’s perspective.</span>
 
 	<div class="role-info">
 		<div class="icon"></div>
