--- a/templates/partials/shared/decide.hbs
+++ b/templates/partials/shared/decide.hbs
@@ -32,7 +32,7 @@
 		{{#if winner}}
 
 			{{!-- winner modal --}}
-			<div class="modal inner-modal" data-duration="{{config.decideDuration}}" data-next="next_screen">
+			<div class="modal inner-modal winner" data-duration="{{config.decideDuration}}" data-next="next_screen">
 				<div class="inner">
 
 					<h1>Congratulations, <strong>{{winner.username}}</strong>!</h1>
