--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -190,8 +190,8 @@
                 <footer id="bottom-bar" style="display:none">
                 
                     <div class="col-sm-6 col-xs-6">
-                        <button id="btn-role-card">role card</button>
-                        <button id="btn-menu">menu</button>
+                        <button id="btn-role-card">Role Card</button>
+                        <button id="btn-menu">Menu</button>
                     </div>
                     <div id="currency" class="col-sm-6 col-xs-6">
                         <div id="pot-coins"><p>coin pot</p>  <span></span></div>
