--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -58,47 +58,47 @@
 	ion.sound({
     sounds: [
         {
-            name: "button_tiny",
+            name: "button_tiny"
         },
         {
-            name: "add_coin",
+            name: "add_coin"
         },
         {
-            name: "alarm_single",
+            name: "alarm_single"
         },
         { 
-            name: "back",
+            name: "back"
         },
         {
-            name: "click1",
+            name: "click1"
         },
         {
-            name: "click2",
+            name: "click2"
         },
         {
-            name: "click3",
+            name: "click3"
         },
         {
-            name: "coins",
+            name: "coins"
         },
         {
-            name: "confirm",
+            name: "confirm"
         },
         {
-            name: "player_green",
+            name: "player_green"
         },
         {
-            name: "player_orange",
+            name: "player_orange"
         },
         {
-            name: "player_pink",
+            name: "player_pink"
         },
         {
-            name: "player_red",
+            name: "player_red"
         },
         {
-            name: "player_yellow",
-        },
+            name: "player_yellow"
+        }
     ],
     volume: 0.5,
     path: sfxPath,
@@ -153,7 +153,7 @@
 		'game:refresh_screen',
 
 		'coins:add',
-		'coins:remove',
+		'coins:remove'
 	
 	];
 
